--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -147,7 +147,7 @@ Os requisitos não funcionais (RNFs) definem as características e restrições 
 		\hline
 		\textbf{RNF 01} & A interface do utilizador deve ser intuitiva e acessível para todas as faixas etárias. \\
 		\hline
-		\textbf{RNF 02} & Todos os dados dos utilizadores devem ser armazenados de forma encriptada. \\
+		\textbf{RNF 02} & Todos os dados dos utilizadores devem ser armazenados de forma segura. \\
 		\hline
 		\textbf{RNF 03} & 	A aplicação deve cumprir com o Regulamento Geral de Proteção de Dados (RGPD) da União Europeia, garantindo a privacidade e o consentimento para o uso de dados pessoais. \\
 		\hline
