--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -195,16 +195,11 @@ O utilizador cria o produto e define as datas disponíveis. Outros utilizadores 
     \item \textbf{Definir um valor associado}: O utilizador define o preço de venda do produto.
     \item \textbf{Permitir ou não receber contrapropostas}: O utilizador decide se aceita ou não contrapropostas de outros utilizadores.
     \item \textbf{Aceitar/Rejeitar contrapropostas}: Se permitido, o vendedor pode aceitar ou rejeitar contrapropostas recebidas.
-    \item \textbf{Concretizada a venda, o produto desaparece}: Após a venda, o produto é removido da plataforma.
+    \item \textbf{Concretizada a venda, o produto desaparece}: Após a venda, o produto é marcado como vendido.
 \end{itemize}
 
 \subsection{Fluxo de Trabalho}
 O utilizador cria o produto e define o preço. Outros utilizadores podem comprar diretamente ou fazer contrapropostas (se permitido). O vendedor aceita ou rejeita as propostas. Após a venda, o produto é removido da plataforma.
-
-\subsection{Interações Essenciais}
-\begin{itemize}
-    \item Sistema de pagamento integrado para facilitar a transação.
-\end{itemize}
 
 \section{Processo de Troca}
 
@@ -219,11 +214,6 @@ O utilizador cria o produto e define o preço. Outros utilizadores podem comprar
 \subsection{Fluxo de Trabalho}
 O utilizador cria o produto e indica o produto desejado em troca.O utilizador aceita ou rejeita as propostas. Após a troca, ambos os produtos são removidos da plataforma.
 
-\subsection{Interações Essenciais}
-\begin{itemize}
-    \item Sistema de correspondência de produtos para facilitar trocas.
-\end{itemize}
-
 \section{Integração dos Processos}
 
 \subsection{Interações entre Processos}
@@ -234,13 +224,13 @@ O utilizador cria o produto e indica o produto desejado em troca.O utilizador ac
 \end{itemize}
 
 \subsection{Fluxo Geral}
-\begin{enumerate}
+\begin{itemize}
     \item O utilizador escolhe o tipo de transação (empréstimo/aluguer, venda ou troca).
     \item O utilizador cria o produto e define os detalhes específicos para cada processo.
     \item Outros utilizadores interagem com o produto (solicitam empréstimo, compram ou propõem trocas).
     \item O proprietário do produto confirma ou rejeita as solicitações.
-    \item Após a transação, o produto é removido (venda/troca) ou permanece disponível (empréstimo/aluguer).
-\end{enumerate}
+    \item Após a transação, o produto é marcado como vendido ou permanece disponível (empréstimo/aluguer).
+\end{itemize}
 
 \section*{Section Name}
 
