--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -184,7 +184,7 @@ O utilizador cria o produto e define as datas disponíveis. Outros utilizadores 
 
 \subsection{Interações Essenciais}
 \begin{itemize}
-    \item Avaliação do produto após o empréstimo/aluguer para garantir a qualidade do serviço.
+    \item Avaliação do vendedor após o empréstimo/aluguer para garantir a qualidade do serviço.
 \end{itemize}
 
 \section{Processo de Venda}
@@ -218,9 +218,9 @@ O utilizador cria o produto e indica o produto desejado em troca.O utilizador ac
 
 \subsection{Interações entre Processos}
 \begin{itemize}
-    \item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo e venda simultaneamente, mas após a venda, ele é removido da plataforma.
+    \item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo e venda simultaneamente, mas após a venda, ele é marcado como vendido.
     \item \textbf{Troca e Venda}: Um produto pode ser oferecido para troca ou venda, mas o utilizador deve escolher uma das opções.
-    \item \textbf{Avaliações}: Todos os processos incluem avaliações pós-transação para garantir a qualidade e confiança na plataforma.
+    \item \textbf{Avaliações}: Todos os vendedores incluem avaliações pós-transação para garantir a qualidade e confiança na plataforma.
 \end{itemize}
 
 \subsection{Fluxo Geral}
