--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -218,9 +218,9 @@ O utilizador cria o produto e indica o produto desejado em troca.O utilizador ac
 
 \subsection{Interações entre Processos}
 \begin{itemize}
-    \item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo e venda simultaneamente, mas após a venda, ele é marcado como vendido.
+    \item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo ou venda,após a venda ele é marcado como vendido.
     \item \textbf{Troca e Venda}: Um produto pode ser oferecido para troca ou venda, mas o utilizador deve escolher uma das opções.
-    \item \textbf{Avaliações}: Todos os vendedores incluem avaliações pós-transação para garantir a qualidade e confiança na plataforma.
+    \item \textbf{Avaliações}: Todos os usuários vão ter a possibilidade de colocar um "elogio" no vendedor após-transação para garantir a qualidade e confiança na plataforma. 
 \end{itemize}
 
 \subsection{Fluxo Geral}
