--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -184,7 +184,7 @@ O utilizador cria o produto e define as datas disponíveis. Outros utilizadores 
 
 \subsection{Interações Essenciais}
 \begin{itemize}
-    \item Avaliação do vendedor após o empréstimo/aluguer para garantir a qualidade do serviço.
+    \item possibilidade de "elogiar" o vendedor após o empréstimo/aluguer para garantir a qualidade do serviço.
 \end{itemize}
 
 \section{Processo de Venda}
