--- a/Specification/RelatorioPDS/essay.tex
+++ b/Specification/RelatorioPDS/essay.tex
@@ -135,6 +135,119 @@ Esse sistema permitiria uma gestão eficiente dos recursos, promovendo a reutili
 
 Dessa forma, ao estabelecer uma plataforma de fácil acesso para troca, venda e empréstimo, seria possível fomentar a cooperação entre os membros da comunidade, fortalecer o senso de pertencimento e promover um consumo mais consciente e sustentável.
 
+
+%------------------------------------------------------------------------------------
+
+\newpage
+\section{Processos de Negócio}
+
+\subsection{Processo de Empréstimo/Aluguer}
+
+\subsubsection{Etapas}
+\begin{itemize}
+	\item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma, fornecendo detalhes como nome, descrição, estado e fotos.
+	\item \textbf{Definir datas bloqueadas}: O utilizador indica as datas em que o produto não estará disponível para empréstimo/aluguer.
+	\item \textbf{Confirmar datas livres}: O sistema verifica e confirma as datas disponíveis para empréstimo/aluguer com base nas datas bloqueadas.
+	\item \textbf{Definir valor associado}: O utilizador define o valor do aluguer (ou 0€ em caso de empréstimo).
+	\item \textbf{O produto não desaparece}: Após o empréstimo/aluguer, o produto permanece na plataforma para futuras transações.
+\end{itemize}
+
+\subsubsection{Fluxo de Trabalho}
+O utilizador cria o produto e define as datas disponíveis. Outros utilizadores podem solicitar o empréstimo/aluguer nas datas livres. O proprietário do produto confirma ou rejeita a solicitação. Após o uso, o produto volta a estar disponível na plataforma.
+
+\subsubsection{Interações Essenciais}
+\begin{itemize}
+	\item Possibilidade de elogiar o vendedor após o empréstimo/aluguer para garantir a qualidade do serviço.
+\end{itemize}
+
+\section{Processo de Venda}
+
+\subsubsection{Etapas}
+\begin{itemize}
+	\item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma com detalhes como nome, descrição, estado e fotos.
+	\item \textbf{Definir um valor associado}: O utilizador define o preço de venda do produto.
+	\item \textbf{Permitir ou não receber contrapropostas}: O utilizador decide se aceita ou não contrapropostas de outros utilizadores.
+	\item \textbf{Aceitar/Rejeitar contrapropostas}: Se permitido, o vendedor pode aceitar ou rejeitar contrapropostas recebidas.
+	\item \textbf{Concretizada a venda, o produto desaparece}: Após a venda, o produto é marcado como vendido.
+\end{itemize}
+
+\subsubsection{Fluxo de Trabalho}
+O utilizador cria o produto e define o preço. Outros utilizadores podem comprar diretamente ou fazer contrapropostas (se permitido). O vendedor aceita ou rejeita as propostas. Após a venda, o produto é removido da plataforma.
+
+\subsection{Processo de Troca}
+
+\subsubsection{Etapas}
+\begin{itemize}
+	\item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma com detalhes como nome, descrição, estado e fotos.
+	\item \textbf{Associar um produto para troca}: O utilizador indica qual produto deseja receber em troca.
+	\item \textbf{Fazer contrapropostas}: Outros utilizadores podem fazer contrapropostas com produtos diferentes.
+	\item \textbf{Aceitar/Rejeitar contrapropostas}: O utilizador pode aceitar ou rejeitar as contrapropostas recebidas.
+\end{itemize}
+
+\subsubsection{Fluxo de Trabalho}
+O utilizador cria o produto e indica o produto desejado em troca.O utilizador aceita ou rejeita as propostas. Após a troca, ambos os produtos são removidos da plataforma.
+
+\subsection{Integração dos Processos}
+
+\subsubsection{Interações entre Processos}
+\begin{itemize}
+	\item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo ou venda,após a venda ele é marcado como vendido.
+	\item \textbf{Troca e Venda}: Um produto pode ser oferecido para troca ou venda, mas o utilizador deve escolher uma das opções.
+	\item \textbf{Avaliações}: Todos os usuários vão ter a possibilidade de colocar um "elogio" no vendedor após-transação para garantir a qualidade e confiança na plataforma. 
+\end{itemize}
+
+\subsubsection{Fluxo Geral}
+\begin{itemize}
+	\item O utilizador escolhe o tipo de transação (empréstimo/aluguer, venda ou troca).
+	\item O utilizador cria o produto e define os detalhes específicos para cada processo.
+	\item Outros utilizadores interagem com o produto (solicitam empréstimo, compram ou propõem trocas).
+	\item O proprietário do produto confirma ou rejeita as solicitações.
+	\item Após a transação, o produto é marcado como vendido ou permanece disponível (empréstimo/aluguer).
+\end{itemize}
+
+%------------------------------------------------------------------------------------
+
+\newpage
+\section{Requisitos Funcionais}
+
+
+%------------------------------------------------------------------------------------
+
+\newpage
+\section{Requisitos Não Funcionais}
+
+Os requisitos não funcionais (RNFs) definem as características e restrições de um sistema que não estão diretamente relacionadas às funcionalidades oferecidas, mas sim à qualidade, desempenho, segurança e usabilidade da aplicação. Eles garantem que o sistema seja eficiente, confiável e utilizável dentro de determinados padrões.
+
+\begin{table}[H]
+	\centering
+	\renewcommand{\arraystretch}{1.3}
+	\begin{tabular}{|c|p{12cm}|}
+		\hline
+		\textbf{Código} & \textbf{Requisito Não Funcional} \\
+		\hline
+		\textbf{RNF 01} & A interface do utilizador deve ser intuitiva e acessível para todas as faixas etárias. \\
+		\hline
+		\textbf{RNF 02} & Todos os dados dos utilizadores devem ser armazenados de forma segura. \\
+		\hline
+		\textbf{RNF 03} & 	A aplicação deve cumprir com o Regulamento Geral de Proteção de Dados (RGPD) da União Europeia, garantindo a privacidade e o consentimento para o uso de dados pessoais. \\
+		\hline
+		\textbf{RNF 04} & O tempo de carregamento do feed da aplicação não deve ultrapassar os 3 segundos. \\
+		\hline
+		\textbf{RNF 05} & A pesquisa de produtos deve devolver os resultados em menos de 5 segundos.\\
+		\hline
+		\textbf{RNF 06} & O sistema deve permitir a implementação de novas funcionalidades com um impacto mínimo no desempenho. \\
+		\hline
+		\textbf{RNF 07} & A aplicação deve exigir uma palavra-passe com pelo menos 8 caracteres, incluindo letras e números. \\
+		\hline
+		\textbf{RNF 08} & O sistema deve utilizar armazenamento em cache para reduzir o número de pedidos ao servidor e melhorar a eficiência. \\
+		\hline
+		\textbf{RNF 09} & O sistema deve limitar o tamanho máximo de imagens carregadas para 5MB, evitando uso excessivo de espaço. \\
+		\hline
+	\end{tabular}
+	\caption{Requisitos Não Funcionais}
+	\label{tab:requisitos_nao_funcionais}
+\end{table}
+
 %------------------------------------------------------------------------------------
 
 \newpage
@@ -178,107 +291,107 @@ Esta arquitetura assegura um sistema robusto, seguro e otimizado, permitindo uma
 
 %------------------------------------------------------------------------------------
 
-
 \newpage
-\section{Requisitos não funcionais}
+\section{Diagrama de Classes}
 
-Os requisitos não funcionais (RNFs) definem as características e restrições de um sistema que não estão diretamente relacionadas às funcionalidades oferecidas, mas sim à qualidade, desempenho, segurança e usabilidade da aplicação. Eles garantem que o sistema seja eficiente, confiável e utilizável dentro de determinados padrões.
+\subsection{Visão Geral}  
 
-\begin{table}[H]
+O diagrama de classes é uma representação visual da estrutura do sistema, demonstrando como suas classes se relacionam e interagem. É essencial para entender a organização do código, garantindo que o design da aplicação seja modular e bem estruturado.
+
+Para isso, seguimos os princípios da \textit{Clean Architecture}, que ajudam a manter um código organizado, de fácil manutenção e escalável. Esta abordagem permite que cada classe tenha uma responsabilidade bem definida, separando claramente as camadas da aplicação e reduzir o acoplamento entre os componentes.
+
+\subsection{Organização do Diagrama}  
+
+O sistema está dividido em vários pacotes, cada um com uma função específica dentro da arquitetura. Esta estrutura facilita a manutenção, a testabilidade e a evolução do sistema. A seguir, apresentamos os principais pacotes e suas respectivas classes.
+
+\subsection{Gestão de Utilizadores}
+
+O pacote \textbf{User Management} trata da gestão dos utilizadores e das suas interações no sistema. Inclui as seguintes classes:
+
+\begin{itemize}
+	\item \textbf{User}: Representa um utilizador do sistema, contendo atributos como nome, email e localização. Além disso, um utilizador pode estar associado a vários \textbf{anúncios} (\textit{listings}) e \textbf{transações} (\textit{transactions}), permitindo rastrear os itens que publicou e as operações que realizou.
+	\item \textbf{Contacts}: Gere a lista de contactos de um utilizador e fornece operações para adicionar e remover contactos.
+	\item \textbf{BlockedUsers}: Permite bloquear e desbloquear utilizadores, garantindo maior controlo sobre interações indesejadas.
+	\item \textbf{Favorites}: Mantém uma lista de itens favoritos do utilizador, facilitando o acesso rápido a listagens de interesse.
+	\item \textbf{Location}: Representa a localização geográfica de um utilizador ou de um anúncio.
+	\item \textbf{Company}: Atributo opcional associado a um utilizador, que indica a empresa à qual ele pertence.
+\end{itemize}
+
+Além destas classes, o pacote inclui várias \textbf{enumerações} para representar os resultados das operações, como por exemplo:
+
+\begin{itemize}
+	\item \texttt{BlockUserResult} – Indica o resultado de uma tentativa de bloquear um utilizador (sucesso, já bloqueado, não encontrado, erro).
+	\item \texttt{AddContactResult} – Define os possíveis resultados ao adicionar um contacto (sucesso, já existe, contacto inválido, erro).
+\end{itemize}
+
+O uso de enumerações para representar estes resultados segue um princípio de \textbf{design limpo}, garantindo que as respostas das operações são bem definidas e evitam o uso de mensagens genéricas ou estados indefinidos. Com esta abordagem, o sistema mantém uma estrutura clara e consistente, facilitando a deteção e tratamento de erros através de códigos específicos.
+
+\begin{figure}[ht]
 	\centering
-	\renewcommand{\arraystretch}{1.3}
-	\begin{tabular}{|c|p{12cm}|}
-		\hline
-		\textbf{Código} & \textbf{Requisito Não Funcional} \\
-		\hline
-		\textbf{RNF 01} & A interface do utilizador deve ser intuitiva e acessível para todas as faixas etárias. \\
-		\hline
-		\textbf{RNF 02} & Todos os dados dos utilizadores devem ser armazenados de forma segura. \\
-		\hline
-		\textbf{RNF 03} & 	A aplicação deve cumprir com o Regulamento Geral de Proteção de Dados (RGPD) da União Europeia, garantindo a privacidade e o consentimento para o uso de dados pessoais. \\
-		\hline
-		\textbf{RNF 04} & O tempo de carregamento do feed da aplicação não deve ultrapassar os 3 segundos. \\
-		\hline
-		\textbf{RNF 05} & A pesquisa de produtos deve devolver os resultados em menos de 5 segundos.\\
-		\hline
-		\textbf{RNF 06} & O sistema deve permitir a implementação de novas funcionalidades com um impacto mínimo no desempenho. \\
-		\hline
-		\textbf{RNF 07} & A aplicação deve exigir uma palavra-passe com pelo menos 8 caracteres, incluindo letras e números. \\
-		\hline
-		\textbf{RNF 08} & O sistema deve utilizar armazenamento em cache para reduzir o número de pedidos ao servidor e melhorar a eficiência. \\
-		\hline
-		\textbf{RNF 09} & O sistema deve limitar o tamanho máximo de imagens carregadas para 5MB, evitando uso excessivo de espaço. \\
-		\hline
-	\end{tabular}
-	\caption{Requisitos Não Funcionais}
-	\label{tab:requisitos_nao_funcionais}
-\end{table}
+	\includegraphics[width=\textwidth]{diagrama_classes_gestao_utilizadores.png}
+	\caption{Pacote de Gestão de Utilizadores}
+	\label{fig:diagrama_classes_gestao_utilizadores}
+\end{figure}
 
-%------------------------------------------------------------------------------------
+\subsection{Anúncios e Itens}
 
-\section{Processo de Empréstimo/Aluguer}
+O pacote \textbf{Listings \& Items} é responsável pela gestão de anúncios e categorização de itens. Contém as seguintes classes:
 
-\subsection{Etapas}
 \begin{itemize}
-    \item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma, fornecendo detalhes como nome, descrição, estado e fotos.
-    \item \textbf{Definir datas bloqueadas}: O utilizador indica as datas em que o produto não estará disponível para empréstimo/aluguer.
-    \item \textbf{Confirmar datas livres}: O sistema verifica e confirma as datas disponíveis para empréstimo/aluguer com base nas datas bloqueadas.
-    \item \textbf{Definir valor associado}: O utilizador define o valor do aluguer (ou 0€ em caso de empréstimo).
-    \item \textbf{O produto não desaparece}: Após o empréstimo/aluguer, o produto permanece na plataforma para futuras transações.
+	\item \textbf{Listings}: Classe que contém uma lista de anúncios, oferecendo funcionalidades para adicionar, remover e pesquisar itens dentro dessa lista.
+	\item \textbf{BaseListing}: Classe abstrata que serve de base para diferentes tipos de anúncios.
+	\item \textbf{SwapListing}: Extende a classe \textit{BaseListing} e representa um item disponível para troca.
+	\item \textbf{SaleListing}: Extende a classe \textit{BaseListing} e representa um item disponível para venda.
+	\item \textbf{GiveawayListing}: Extende a classe \textit{BaseListing} e utilizado para itens oferecidos gratuitamente.
+	\item \textbf{RentalListing}: Extende a classe \textit{BaseListing} e representa itens disponíveis para aluguer.
 \end{itemize}
 
-\subsection{Fluxo de Trabalho}
-O utilizador cria o produto e define as datas disponíveis. Outros utilizadores podem solicitar o empréstimo/aluguer nas datas livres. O proprietário do produto confirma ou rejeita a solicitação. Após o uso, o produto volta a estar disponível na plataforma.
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{diagrama_classes_anuncios_itens.png}
+	\caption{Pacote de Anúncios e Itens}
+	\label{fig:diagrama_classes_anuncios_itens}
+\end{figure}
 
-\subsection{Interações Essenciais}
+\subsection{Transações}
+
+O pacote \textbf{Transactions} gere as operações de compra, venda, troca e oferta de itens. Inclui:
+
 \begin{itemize}
-    \item Possibilidade de elogiar o vendedor após o empréstimo/aluguer para garantir a qualidade do serviço.
+	\item \textbf{Transactions}: Classe que contém uma lista de todas as transações registadas no sistema.
+	\item \textbf{BaseTransaction}: Classe abstrata que define a estrutura comum a todas as transações, com atributos como utilizador, item, data e status.
+	\item \textbf{RentalTransaction}: Extende a classe \textit{BaseTransaction} e representa um aluguer de item entre utilizadores.
+	\item \textbf{SaleTransaction}: Extende a classe \textit{BaseTransaction} e representa uma transação de venda.
+	\item \textbf{SwapTransaction}: Extende a classe \textit{BaseTransaction} e permite a troca de itens entre utilizadores.
+	\item \textbf{GiveawayTransaction}: Extende a classe \textit{BaseTransaction} e gere a oferta de um item sem custo.
 \end{itemize}
 
-\section{Processo de Venda}
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.53\textwidth]{diagrama_classes_transacoes.png}
+	\caption{Pacote de Transações}
+	\label{fig:diagrama_classes_transacoes}
+\end{figure}
 
-\subsection{Etapas}
-\begin{itemize}
-    \item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma com detalhes como nome, descrição, estado e fotos.
-    \item \textbf{Definir um valor associado}: O utilizador define o preço de venda do produto.
-    \item \textbf{Permitir ou não receber contrapropostas}: O utilizador decide se aceita ou não contrapropostas de outros utilizadores.
-    \item \textbf{Aceitar/Rejeitar contrapropostas}: Se permitido, o vendedor pode aceitar ou rejeitar contrapropostas recebidas.
-    \item \textbf{Concretizada a venda, o produto desaparece}: Após a venda, o produto é marcado como vendido.
+\subsection{Trocas}
+
+O pacote \textbf{Swaps} lida com a gestão de propostas de troca entre utilizadores. Inclui:
+
+\begin{itemize} 
+	\item \textbf{SwapOffers}: Contém uma lista de todas as ofertas de troca ativas no sistema. 
+	\item \textbf{SwapOffer}: Representa uma proposta individual de troca entre utilizadores.
 \end{itemize}
 
-\subsection{Fluxo de Trabalho}
-O utilizador cria o produto e define o preço. Outros utilizadores podem comprar diretamente ou fazer contrapropostas (se permitido). O vendedor aceita ou rejeita as propostas. Após a venda, o produto é removido da plataforma.
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{diagrama_classes_trocas.png}
+	\caption{Pacote de Trocas}
+	\label{fig:w}
+\end{figure}
 
-\section{Processo de Troca}
+\subsection{Relações entre os Pacotes}
 
-\subsection{Etapas}
-\begin{itemize}
-    \item \textbf{Criar um produto}: O utilizador adiciona um produto à plataforma com detalhes como nome, descrição, estado e fotos.
-    \item \textbf{Associar um produto para troca}: O utilizador indica qual produto deseja receber em troca.
-    \item \textbf{Fazer contrapropostas}: Outros utilizadores podem fazer contrapropostas com produtos diferentes.
-    \item \textbf{Aceitar/Rejeitar contrapropostas}: O utilizador pode aceitar ou rejeitar as contrapropostas recebidas.
-\end{itemize}
-
-\subsection{Fluxo de Trabalho}
-O utilizador cria o produto e indica o produto desejado em troca.O utilizador aceita ou rejeita as propostas. Após a troca, ambos os produtos são removidos da plataforma.
-
-\section{Integração dos Processos}
-
-\subsection{Interações entre Processos}
-\begin{itemize}
-    \item \textbf{Empréstimo/Aluguer e Venda}: Um produto pode estar disponível para empréstimo ou venda,após a venda ele é marcado como vendido.
-    \item \textbf{Troca e Venda}: Um produto pode ser oferecido para troca ou venda, mas o utilizador deve escolher uma das opções.
-    \item \textbf{Avaliações}: Todos os usuários vão ter a possibilidade de colocar um "elogio" no vendedor após-transação para garantir a qualidade e confiança na plataforma. 
-\end{itemize}
-
-\subsection{Fluxo Geral}
-\begin{itemize}
-    \item O utilizador escolhe o tipo de transação (empréstimo/aluguer, venda ou troca).
-    \item O utilizador cria o produto e define os detalhes específicos para cada processo.
-    \item Outros utilizadores interagem com o produto (solicitam empréstimo, compram ou propõem trocas).
-    \item O proprietário do produto confirma ou rejeita as solicitações.
-    \item Após a transação, o produto é marcado como vendido ou permanece disponível (empréstimo/aluguer).
-\end{itemize}
+Os pacotes interagem de forma a garantir a funcionalidade completa do sistema. A classe \texttt{User} está associada às \texttt{Transactions}, registando as operações realizadas pelos utilizadores, como compras, vendas, alugueres, trocas e ofertas. As \texttt{Listings} estão relacionadas com os utilizadores, representando os itens que estes publicam no sistema, seja para venda, troca, aluguer ou oferta. O pacote \texttt{Swaps} é responsável por gerir as propostas de troca entre utilizadores, estando diretamente ligado às \texttt{SwapOffer}. Cada pacote tem uma função bem definida, e as ligações entre eles garantem a coesão e eficiência do sistema.
 
 %------------------------------------------------
 \newpage
